TNT-128 Expense tab - UI Improvement (Follow up for TNT-33) TNT-203 Fix bugs - Overflowing words and missing letters

--- a/fe-tinhtien/src/css/expense.css
+++ b/fe-tinhtien/src/css/expense.css
@@ -14,6 +14,8 @@
 }
 .expense-name {
   color: green;
+  word-wrap: break-word;
+  white-space: pre-wrap;
 }
 .btn-add-expense {
   position: absolute;
