--- a/fe-tinhtien/src/css/expenseDialog.css
+++ b/fe-tinhtien/src/css/expenseDialog.css
@@ -2,3 +2,7 @@
     margin: 0px 0px 5px 8px;
     float: right;
 }
+.field__selectTitle{
+    height: 34px;
+    padding: 5px 12px 3px;
+}
